tests/paczka1/fuzzy1/61815245.err
Error in line 8: JSn9lUiaAUN A999 68,3
Error in line 11: THPByvGX A249 21,3
Error in line 17: h7UUKdqf S582 1,5
Error in line 33: h7UUKdqf A249 168,08
